--- a/src/scss/_common.scss
+++ b/src/scss/_common.scss
@@ -202,7 +202,6 @@ figure {
 }
 
 article img {
-  border-radius:7px;
   overflow:hidden;
 }
 
