--- a/src/scss/_page.scss
+++ b/src/scss/_page.scss
@@ -66,4 +66,7 @@ p {
   .loading .grid-item {
       margin: 10px;
   }
+  img {
+    border-radius:7px;
+  }
 }
